[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/NotoSansTC-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Start.gd" type="Script" id=2]
[ext_resource path="res://assets/title.png" type="Texture" id=3]
[ext_resource path="res://assets/background2.png" type="Texture" id=4]
[ext_resource path="res://assets/onryou.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/game-over-ashutosh.mp3" type="AudioStream" id=6]
[ext_resource path="res://src/window.tres" type="Theme" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 2
outline_color = Color( 0.521569, 0, 0, 1 )
extra_spacing_char = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0.552941, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = 10
extra_spacing_char = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="OpenSimplexNoise" id=5]

[sub_resource type="NoiseTexture" id=6]
width = 5
height = 60
noise = SubResource( 5 )

[sub_resource type="ExternalTexture" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 0.113725 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0196078, 0.0823529, 0.145098, 0.74902 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 0, 0, 0.517647 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 15
extra_spacing_bottom = 15
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_separator = Color( 0.831373, 0.831373, 0.831373, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = SubResource( 6 )
PopupMenu/icons/radio_unchecked = SubResource( 7 )
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 8 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 9 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[sub_resource type="DynamicFont" id=12]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="background2" type="Sprite" parent="."]
position = Vector2( 379.483, 725.11 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="Sprite" parent="."]
visible = false
position = Vector2( 360, 345 )
texture = ExtResource( 3 )

[node name="titles" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -248.0
margin_top = 300.0
margin_right = 248.0
margin_bottom = 401.0
custom_fonts/font = SubResource( 1 )
text = "驚駭魔方"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="adreward" type="Label" parent="titles"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = 59.5
margin_right = 232.0
margin_bottom = 92.5
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -37.0
margin_right = 141.0
margin_bottom = 409.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="Menu"]
margin_right = 281.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = "開始遊戲"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="help" type="Button" parent="Menu"]
margin_top = 90.0
margin_right = 281.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 3 )
text = "遊戲說明"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="mode" type="Button" parent="Menu"]
margin_top = 180.0
margin_right = 281.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 3 )
text = "遊戲模式"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="about" type="Button" parent="Menu"]
margin_top = 270.0
margin_right = 281.0
margin_bottom = 356.0
custom_fonts/font = SubResource( 3 )
text = "關於版權"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="readAd" type="Button" parent="Menu"]
margin_top = 360.0
margin_right = 281.0
margin_bottom = 446.0
custom_fonts/font = SubResource( 3 )
text = "觀看廣告"
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -277.0
margin_top = -272.5
margin_right = 277.0
margin_bottom = 272.5
theme = ExtResource( 8 )
window_title = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "本遊戲為無限延伸地圖
追求最高的分數吧！

<= 模式介紹 =>
無限地獄：透過不斷的往下獲取高分
無限天堂：透過不斷的往上獲取高分

<= 遊戲機制 =>
1.方塊在空中超過三秒將會直接結束遊戲
2.生命值歸零時將會結束遊戲
3.透過遊戲介面的控制鈕操縱方塊
4.在無限天堂模式中，每上升一定的踏板數，
將會補充生命值"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelMode" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -277.0
margin_top = -124.0
margin_right = 277.0
margin_bottom = 124.0
theme = ExtResource( 8 )
window_title = "Select Gamemode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="SelMode"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -86.0
theme = SubResource( 11 )
text = "選擇模式"
flat = true
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SelMode"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -216.0
margin_top = 19.0
margin_right = 216.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 12 )
text = "選擇您要遊玩的模式
若要在開始遊戲後更改模式
請於遊戲結束畫面點選「回到標題」按鈕"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="AboutDia" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -277.0
margin_top = -254.0
margin_right = 277.0
margin_bottom = 254.0
theme = ExtResource( 8 )
window_title = "About Copyright"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AboutDia"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 12 )
text = "<= Music =>
Haus Guest – Gunnar Olsen
Leave - Rexlambo
Sahara - Lucjo
Game Over - ASHUTOSH

Music promoted by Audio Library
https://youtu.be/X0vpSHjk5bA

Creative Commons
Attribution-ShareAlike 3.0 Unported
CC BY-SA 3.0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Menu/mode" to="." method="_on_mode_pressed"]
[connection signal="pressed" from="Menu/about" to="." method="_on_about_pressed"]
[connection signal="pressed" from="Menu/readAd" to="." method="_on_readAd_pressed"]
